--- a/keypoints.css
+++ b/keypoints.css
@@ -15,6 +15,16 @@
   color: white;
 }
 
+.keypoint.selected {
+  background-color: aqua;
+  color: black;
+}
+
+.keypoint.selected > .label {
+  background-color: aqua;
+  color: black;
+}
+
 .keypoint:hover {
   overflow: visible;
 }
